correct typo in string-array

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,9 +17,9 @@
         <item>Health</item>
         <item>Insurance</item>
         <item>Entertainment</item>
-        <Item>Shopping</Item>
+        <item>Shopping</item>
         <item>Home Improvement</item>
-        <Item>Education</Item>
+        <item>Education</item>
         <item>Debt Repayment</item>
         <item>Gifts/Donations</item>
         <item>Travel</item>
