--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="dollar_sign">$</string>
     <string name="new_expense">New Expense</string>
     <string name="home">Home</string>
+    <string name="delete_expense">Delete Expense</string>
     <string-array name="expense_categories_array">
         <item>Housing</item>
         <item>Utilities</item>
