--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,9 @@
     <string name="new_expense">New Expense</string>
     <string name="home">Home</string>
     <string name="delete_expense">Delete Expense</string>
+    <string name="budget_amount_hint">Enter your monthly budget.</string>
+    <string name="budget_amount_title">Your monthly budget</string>
+    <string name="nav_options_title">Where would you like to go?</string>
     <string-array name="expense_categories_array">
         <item>Housing</item>
         <item>Utilities</item>
